# prediCtive

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: c-cpp.yml
assets/: simpleGrammar.cg
backend/: CMakeLists.txt  README.md
backend/docs/grammar/: grammar.md
backend/src/: main.cpp
backend/src/parser/: Parser.cpp  Parser.h  prediCtiveParser.cpp  prediCtiveParser.h  utils.cpp
backend/src/parser/grammar/: GrammarBuilder.cpp  GrammarBuilder.h  Symbol.cpp  Symbol.h  Terminal.h
backend/src/parser/node/: Node.h
backend/src/parser/visitors/astConversion/: ClosureSimplifierVisitor.h  ParseTreeSimplifierVisitor.cpp  RuleExtractorVisitor.cpp  RuleSimplifierVisitor.cpp  RuleSimplifierVisitor.h  SkipExtractorVisitor.cpp  SkipExtractorVisitor.h  TokenExtractorVisitor.cpp  TokenExtractorVisitor.h
backend/src/parser/visitors/grammar/: GrammarBuilderVisitor.cpp
backend/src/parser/visitors/semantic/: KeywordVerifierVisitor.h  SemanticCheckVisitor.cpp
backend/test/: TestUtils.cpp  configuration_test.cpp  parser_generation_test.cpp
backend/test/assets/: simpleGrammar.cg
docs/grammar/: first.md  follow.md  grammar.md  nullable.md  parsing_table.md
google_test/: CMakeLists.txt
src/: main.cpp
src/parser/: Node.cpp  Node.h  NonTerminal.cpp  NonTerminal.h  Parser.cpp  Parser.h  Recognizer.cpp  Recognizer.h  Symbol.cpp  Symbol.h  Terminal.cpp  Terminal.h  prediCtiveParser.cpp  prediCtiveParser.h  utils.cpp  utils.h
src/parser/ast/: ClosureSimplifierVisitor.cpp  ClosureSimplifierVisitor.h  Node.cpp  Node.h  RuleExtractorVisitor.cpp  RuleExtractorVisitor.h  RuleSimplifierVisitor.cpp  RuleSimplifierVisitor.h  SkipExtractorVisitor.cpp  SkipExtractorVisitor.h  TokenExtractorVisitor.cpp  TokenExtractorVisitor.h  Visitor.cpp  Visitor.h
src/parser/grammar/: GrammarBuilder.cpp  GrammarBuilder.h  GrammarVerifier.cpp  GrammarVerifier.h  NonTerminal.cpp  NonTerminal.h  Recognizer.cpp  Recognizer.h  Symbol.cpp  Symbol.h  Terminal.cpp  Terminal.h
src/parser/node/: Node.cpp  Node.h
src/parser/visitors/: Visitor.cpp  Visitor.h
src/parser/visitors/astConversion/: ClosureSimplifierVisitor.cpp  ParseTreeSimplifierVisitor.h  RuleExtractorVisitor.h  RuleSimplifierVisitor.cpp  TokenExtractorVisitor.cpp
src/parser/visitors/grammar/: GrammarBuilderVisitor.cpp  GrammarBuilderVisitor.h
src/parser/visitors/semantic/: KeywordVerifierVisitor.cpp  SemanticCheckVisitor.cpp  SemanticCheckVisitor.h
test/: CMakeLists.txt  TestUtils.h  grammar_test.cpp  parser_generation_test.cpp  parser_test.cpp
test/assets/: simpleGrammar.cg  testFile.sg  tokens.cg
